// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c4vt7k4 soui-divider-wrapper c-k6f4od soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c4vt7k4 soui-divider-wrapper c-k6f4od soui-divider-horizontal cs5jjnm soui-divider-with-text c-qg25s9 soui-divider-with-text-center"
  >
    <span
      class="c-38yf8s soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c4vt7k4 soui-divider-wrapper c-k6f4od soui-divider-horizontal cs5jjnm soui-divider-with-text c-944byv soui-divider-with-text-left"
  >
    <span
      class="c-38yf8s soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c4vt7k4 soui-divider-wrapper c-k6f4od soui-divider-horizontal cs5jjnm soui-divider-with-text c1o38xm soui-divider-with-text-right"
  >
    <span
      class="c-38yf8s soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
